--- a/public/styles/variables/_dimensions.scss
+++ b/public/styles/variables/_dimensions.scss
@@ -88,7 +88,7 @@
     --padding-footer: 6.5em 4em 2.5em 4em;
 
     --margin-header: 0 0 12px 0;
-    --margin-header-link-item: 0;
+    --margin-header-link-item: 0 .4em;
     --margin-header-message-home: auto 0 2em 0;
     --maxwidth-header-message: 450px;
     --padding-header: 5em 6em;
